--- a/site/index.html
+++ b/site/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Text Analyzer</title>
   
-    <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="App.css">
 
 
 
