Fixed issue TA-5 : UI Alignment Issue

--- a/site/index.html
+++ b/site/index.html
@@ -18,7 +18,7 @@
            
         
 
-      <textarea type="text"  id="review" onchange="handleChange()"> Type something...</textarea> 
+      <textarea type="text"  id="review" onchange="handleChange()"> Type something..  mock.</textarea> 
 
 
       <label for="review"><input type="submit" value="Analyze" />  </div> </label>
